# experiments

./: .gitignore
claude_explore/: .cache_alice.txt  .cache_hamlet.txt  bracket_simulator.py  championship_value.py  f10_backtest.py  kelly_optimizer.py  linear_a_analysis.py  linear_a_bigrams.py  linear_a_positions.py  linear_ab_memory.py  live_tracker.py  markov_writer.py  pyproject.toml  tempo_analysis.py
college-basketball/: CLAUDE.md  config.py  features.py  fetch_results.py  first_to_10_2026.csv  first_to_10_2026_v2.csv  first_to_10_model_2025.pkl  first_to_10_model_2026.pkl  first_to_10_predictions.csv  first_to_10_results.csv  pipeline.py  predict.py  predict_totals.py  pyproject.toml  team_stats_2026.csv  train.py  train_totals.py
college-basketball/data/processed/: betting_lines_sweet16.csv  predictions_2026.csv  sweet16_predictions_2026.csv  sweet16_totals_spread_lines.csv  team_tempo_2026.csv  totals_predictions_2026.csv
college-basketball/ingest/: build_bracket.py  build_first_to_10.py  build_model_2026.py  build_tempo_stats.py  eval_model.py  extract_first_to_10.py  extract_results.py  get_all_game_ids.py  get_all_ids_parallel.py  get_full_season.py  scrape_fast.py  scrape_pbp.py  scrape_pbp_parallel.py  scrape_season.py  scrape_stats_parallel.py  scrape_tournament.py
college-basketball/source/: all_game_ids.txt  full_game_ids.txt  tournament_schedule_2026.csv  tournament_schedule_2026_updated.csv
create-instapaper/: README.md
powerpoint-lib/: README.md  pyproject.toml
powerpoint-lib/powerpoint_lib/: __init__.py  table_exporter.py
(+79 files in other folders)
