[project]
name = "college-basketball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.1",
    "sportsdataverse>=0.0.40",
    "urllib3>=2.6.3",
]
